Corrected the overlapping responsiveness issues

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -17,7 +17,16 @@
     }
 }
 
-@media (min-width: 383px) and (max-width: 992px){
+@media (min-width: 383px) and (max-width: 470px) {
+    .featured{
+        width: 25.5%!important;
+    }
+    .stateOfDaps{
+        width: 73.5%!important;
+    }
+}
+
+@media (min-width: 471px) and (max-width: 992px){
     .featured{
         width: 20.5%!important;
     }
